# WindGB

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
app/src/: main.cpp  ui.cpp  ui.h
assets/: WindGB_logo.aseprite
doc/: exit_code.md
emu/: CMakeLists.txt
emu/src/: bus.cpp  bus.h  cartridge.cpp  cartridge.h  common.cpp  common.h  cpu.cpp  cpu.h  emu.cpp  emu.h  instructions.h  interrupt.cpp  interrupt.h  io_reg.cpp  io_reg.h  log.cpp  log.h  ram.cpp  ram.h  registers.h  tile.cpp  tile.h
emu/src/core/: bus.cpp  bus.h  cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  emu.cpp  emu.h  instruction.cpp  instructions.h  interrupt.cpp  interrupt.h  io.cpp  io.h  io_reg.cpp  io_reg.h  mbc.h  ram.cpp  ram.h  registers.cpp  registers.h  timer.cpp  timer.h
emu/src/core/mbc/: mbc1.cpp  mbc1.h
emu/src/events/: Event.h  EventApp.h  EventBus.cpp  EventBus.h
emu/src/gfx/: oam.cpp  oam.h  ppu.cpp  ppu.h  tile.cpp  tile.h  tilemap.cpp  tilemap.h  tileset.cpp  tileset.h
emu/src/utils/: common.h  exit_codes.h  log.cpp  log.h
lib/: CMakeLists.txt
lib/windgb/: CMakeLists.txt  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  common.hpp  component.hpp  cpu.cpp  cpu.hpp  gameboy.cpp  gameboy.hpp  instructions.cpp  instructions.hpp  interrupt.cpp  interrupt.hpp  io.cpp  io.hpp  joypad.cpp  joypad.hpp  logger.cpp  logger.hpp  mbc.cpp  mbc.hpp  ppu.cpp  ppu.hpp  ram.cpp  ram.hpp  registers.hpp  timer.cpp  timer.hpp  utils.hpp  windgb.hpp
lib/windgb/mbc/: mbc1.cpp  mbc1.hpp  mbc5.cpp  mbc5.hpp
src/: CMakeLists.txt  WindGB.h  main.cpp  pch.h
src/core/: cartridge.cpp  cartridge.h  cpu.cpp  cpu.h  gb.cpp  gb.h  memory.cpp  memory.h  opcodes.cpp  opcodes.h  ram.cpp  ram.h  registers.cpp  registers.h
src/utils/: Logger.cpp  Logger.h
test/: CMakeLists.txt  cpu_instr.cpp
tests/: gameboy_doctor.py
